[tool.poetry]
name = "homework7"
version = "0.1.0"
description = ""
authors = ["Oktawian Czakiert <110773676+OktawianCzakiert@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
faker = "^21.0.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
